@@ -4,10 +4,11 @@ import { useSplitClient } from './useSplitClient';
 const noOpFalse = () => false;
 
 /**
- * 'useTrack' is a hook that returns the track method from a Split client.
- * It uses the 'useContext' hook to access the client from the Split context.
+ * 'useTrack' is a hook that retrieves the track method from a Split client.
+ * It uses the 'useSplitClient' hook to access the client from the Split context.
+ * Basically, it is a shortcut for `const track = useSplitClient().client?.track || (() => false);`.
  *
- * @returns A track function bound to a Split client. If the client is not available, the result is a no-op function that returns false.
+ * @returns A track function of the Split client. If the client is not available, the result is a no-op function that returns false.
  *
  * @see {@link https://help.split.io/hc/en-us/articles/360020448791-JavaScript-SDK#track}
  */
